--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemailer": "^6.9.3",
-    "nodemailer-sendgrid": "^1.0.3"
+    "nodemailer-sendgrid": "^1.0.3",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
