--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemailer": "^6.9.3",
-    "nodemailer-sendgrid": "^1.0.3",
-    "toastify-js": "^1.12.0"
+    "nodemailer-sendgrid": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
